--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "babel-eslint": "^10.1.0",
+    "detect-zoom": "^1.0.2",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "formik": "^2.1.5",
     "json-server": "^0.16.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
