--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "eslint-plugin-import": "^2.21.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^2.5.1"
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "gh-pages": "^3.1.0"
   },
   "homepage": "http://lanskayairina.github.io/cv"
 }
