--- a/package.json
+++ b/package.json
@@ -66,5 +66,5 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "gh-pages": "^3.1.0"
   },
-  "homepage": "http://lanskayairina.github.io/skills"
+  "homepage": "http://lanskayairina.github.io/cv/skills"
 }
