add btn continue and refactor

--- a/package.json
+++ b/package.json
@@ -66,5 +66,5 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "gh-pages": "^3.1.0"
   },
-  "homepage": "http://lanskayairina.github.io/Curriculum_Vitae"
+  "homepage": "http://lanskayairina.github.io/CV_Irina_Lanskaya"
 }
